Fix homepage styling on mobile

--- a/app/assets/stylesheets/shared.css.sass
+++ b/app/assets/stylesheets/shared.css.sass
@@ -19,3 +19,6 @@ $break-lg: 1200px
 .max-size
   height: 100%
   width: 100%
+
+.max-height
+  height: 100%
